# discord_notion_link

./: .dockerignore  .env.sample  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
make_thread_summary/: main.py
make_thread_summary/utils/: get_content_by_url.py  has_url_in_text.py  insert_notion.py  summarize_text_by_openai.py
